WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263525
REGRESSION ( Sonoma?): [ Sonoma release x86_64 ] Three TestWebKitAPI.WKWebExtensionAPITabs tests are a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=263525
Summary
REGRESSION ( Sonoma?): [ Sonoma release x86_64 ] Three TestWebKitAPI.WKWebExt...
Karl Rackler
Reported
2023-10-23 08:57:11 PDT
Description: TestWebKitAPI.WKWebExtensionAPITabs.Connect TestWebKitAPI.WKWebExtensionAPITabs.ConnectWithMultipleListeners TestWebKitAPI.WKWebExtensionAPITabs.PortDisconnectWithMultipleListeners TestWebKitAPI.WebKit.SlowBeforeUnloadPromptAllow TestWebKitAPI.WebKit.SlowBeforeUnloadPromptReject TestWebKitAPI.WebKit2CustomProtocolsTest.LoadInvalidScheme Is a consistent timeout on Sonoma release x86_64 ToT and since bring-up. History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPITabs.Connect&test=TestWebKitAPI.WKWebExtensionAPITabs.ConnectWithMultipleListeners&test=TestWebKitAPI.WKWebExtensionAPITabs.PortDisconnectWithMultipleListeners&test=TestWebKitAPI.WebKit.SlowBeforeUnloadPromptAllow&test=TestWebKitAPI.WebKit.SlowBeforeUnloadPromptReject&test=TestWebKitAPI.WebKit2CustomProtocolsTest.LoadInvalidScheme&version_name=Sonoma&style=release&architecture=x86_64
Results: Timeout TestWebKitAPI.WKWebExtensionAPITabs.Connect TestWebKitAPI.WKWebExtensionAPITabs.ConnectWithMultipleListeners TestWebKitAPI.WKWebExtensionAPITabs.PortDisconnectWithMultipleListeners TestWebKitAPI.WebKit.SlowBeforeUnloadPromptAllow TestWebKitAPI.WebKit.SlowBeforeUnloadPromptReject TestWebKitAPI.WebKit2CustomProtocolsTest.LoadInvalidScheme
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-23 08:57:29 PDT
<
rdar://problem/117354451
>
Karl Rackler
Comment 2
2023-10-23 13:53:23 PDT
<edit> removing the following tests that need to be their own separate bug TestWebKitAPI.WebKit.SlowBeforeUnloadPromptAllow TestWebKitAPI.WebKit.SlowBeforeUnloadPromptReject TestWebKitAPI.WebKit2CustomProtocolsTest.LoadInvalidScheme <edit> Description: TestWebKitAPI.WKWebExtensionAPITabs.Connect TestWebKitAPI.WKWebExtensionAPITabs.ConnectWithMultipleListeners TestWebKitAPI.WKWebExtensionAPITabs.PortDisconnectWithMultipleListeners History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPITabs.Connect&test=TestWebKitAPI.WKWebExtensionAPITabs.ConnectWithMultipleListeners&test=TestWebKitAPI.WKWebExtensionAPITabs.PortDisconnectWithMultipleListeners&version_name=Sonoma&style=release&architecture=x86_64
Karl Rackler
Comment 3
2023-10-23 14:08:51 PDT
These three tests are a constant timeout on Sonoma Release x86_64 only. I cannot reproduce this issue locally, but can reproduce it on the bot.
Timothy Hatcher
Comment 4
2023-12-06 09:50:53 PST
***
Bug 265707
has been marked as a duplicate of this bug. ***
Timothy Hatcher
Comment 5
2023-12-06 09:50:59 PST
***
Bug 265912
has been marked as a duplicate of this bug. ***
Timothy Hatcher
Comment 6
2023-12-06 09:57:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21397
EWS
Comment 7
2023-12-06 15:01:27 PST
Committed
271636@main
(8cd58dac3ab9): <
https://commits.webkit.org/271636@main
> Reviewed commits have been landed. Closing PR #21397 and removing active labels.
Timothy Hatcher
Comment 8
2023-12-06 15:47:51 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/21415
EWS
Comment 9
2023-12-06 15:59:56 PST
Committed
271642@main
(7008e0fc8a6c): <
https://commits.webkit.org/271642@main
> Reviewed commits have been landed. Closing PR #21415 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug