REGRESSION ( Sonoma?): [ Sonoma release x86_64 ] Three TestWebKitAPI.WKWebExtensionAPITabs tests are a consistent timeout https://webkit.org/b/263525 rdar://problem/117354451

Reviewed by Alex Christensen.

Add EagerCallbackAggregator, which is like CallbackAggregator, but ensures a callback is executed at
its first opportunity, ignoring subsequent triggers. This was needed for the reply mechanism used
by runtime.sendMessage and friends.

* Source/WTF/wtf/CallbackAggregator.h:
(WTF::EagerCallbackAggregator): Added.
* Source/WTF/wtf/Ref.h:
(WTF::Ref::operator* const): Added.
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIRuntimeCocoa.mm:
(WebKit::WebExtensionContext::runtimeSendMessage): Use EagerCallbackAggregator.

Canonical link: https://commits.webkit.org/271636@main